# lily-cafe-pos

./: .env.example  .gitignore  ANALYTICS_SETUP.md  API_REFERENCE_CARD.md  AUTO_UPDATE_SETUP.md  CASH_COUNTER_IMPROVEMENTS_IMPLEMENTED.md  CASH_COUNTER_TERMINOLOGY_IMPROVEMENTS.md  CASH_COUNTER_TEST_REPORT.md  CASH_COUNTER_UX_ANALYSIS.md  CASH_COUNTER_UX_TEST_REPORT.md  CHANGELOG.md  CLIENT_QUICK_REFERENCE.md  MANUAL_TESTING_GUIDE.md  QUICKSTART_WINDOWS.md  README.md.bak  THESYS_C1_INTEGRATION.md  TWO_COLUMN_LAYOUT_IMPLEMENTATION.md  UI_HIGH_PRIORITY_IMPROVEMENTS.md  UI_IMPROVEMENTS_IMPLEMENTED.md  UI_MEDIUM_PRIORITY_IMPROVEMENTS.md  V0.2_RELEASE_CHECKLIST.md  VALIDATION_RESULTS.md  auto-update.bat  categories.csv  claude.md  menu_items.csv  run.sh  setup-auto-update.ps1  start-backend.bat  start-both.bat  start-frontend.bat  update-now.bat  view-update-logs.bat
backend/: .env.example  THERMAL_PRINTING.md  detect_printer.py  pyproject.toml  test_api.sh  test_multiple_items.py  test_receipts.py  test_rounding.py
backend/app/: main.py  version.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  analytics.py  auth.py  cash_counter.py  categories.py  config.py  inventory.py  inventory_categories.py  menu.py  orders.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/crud/: __init__.py  crud.py  crud_analytics.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  cash_models.py  inventory_models.py  models.py
backend/app/schemas/: __init__.py  analytics_schemas.py  cash_schemas.py  inventory_schemas.py  schemas.py
backend/app/utils/: chit_generator.py  email_sender.py  escpos_printer.py  pdf_generator.py  printer.py  rounding.py
backend/scripts/: README.md  README_MIGRATIONS.md  backup_database.py  configure_printer.py  delete_today_cash_counter.py  migrate_add_is_parcel.py  migrate_add_is_served.py  migrate_add_is_vegetarian.py  migrate_add_quantity_served.py  migrate_database.py  migrate_move_is_parcel_to_order_items.py  migrate_v01x_to_v020.py  migrate_v02_add_inventory_and_cash_tables.py  reset_db_clean.py  reset_db_with_seed.py  seed_data.py  seed_from_csv.py  validate_implementation.py  verify_v02_backend.py
backend/tests/: README.md  conftest.py  test_api_categories.py  test_api_menu.py  test_auth.py  test_auth_endpoints.py  test_crud_categories.py  test_crud_menu.py  test_order_endpoints.py  test_orders.py  test_payments.py  test_schemas.py  test_security.py
docs/: ANALYTICS_DASHBOARD_CHARTS.md  API_REFERENCE_CARD.md  AUTO_PRINT_SETUP_GUIDE.md  DATABASE_BACKUP_AND_SYNC.md  EXISTING_INVENTORY_CHECKLIST_TEMPLATE.md  GIT_WORKFLOW.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_V0.2.md  ORDER_CHIT_GUIDE.md  PRE_MERGE_CHECKLIST.md  PRINT_RECEIPT_TEST_USAGE.md  QUICK_START_V02.md  README.md  THERMAL_PRINTER_TESTING.md  UV-QUICK-REFERENCE.md  VALIDATION_RESULTS.md  VERSION_MANAGEMENT.md  WINDOWS_DEPLOYMENT_GUIDE.md  master-project-document.md  receipt-design-instructions.md  v0.1-completion-report.md  v0.1-technical-spec.md  v0.2-technical-spec.md
frontend/: .env.example  API_CLIENT_USAGE.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  version.ts
frontend/src/api/: analytics.ts  cash.ts  client.ts  inventory.ts
frontend/src/components/: AdminLayout.tsx  BackgroundPattern.tsx  BottomNav.tsx  Button.tsx  Card.tsx  CartDrawer.tsx  ConfirmDialog.tsx  CustomC1Chat.tsx  DailyRevenueModal.tsx  DatePickerWithQuickFilters.tsx  DenominationCounter.tsx  EditOrderModal.tsx  EditPaymentsModal.tsx  EditServedQuantityModal.tsx  EmptyState.tsx  FloatingCartButton.tsx  KeyboardShortcutsHelp.tsx  LoadingSpinner.tsx  MenuItemForm.tsx  MenuList.tsx  PartialServeModal.tsx  PaymentModal.tsx  ProtectedRoute.tsx  Sidebar.tsx  (+3 more)
scripts/: README.md
scripts/macos/: start-dev.sh  start.sh  update.sh
scripts/windows/: logs.bat  setup.bat  start-dev.bat  start.bat  update.bat
(+58 files in other folders)
